--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Beersfest | Festa di Halloween</title>
-    <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Festa di Halloween | Musica e Birra da Paura</title>
+    <meta name="description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Beerfest: due giorni di birra e concerti"/>
-    <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/eventi/beerfest.html"/>
-    <meta property="og:url" content="http://beerstrot.it/eventi/beerfest.html"/>
+    <meta name="twitter:title" content="Halloween: Musica e Birra da Paura"/>
+    <meta name="twitter:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/eventi/halloween.html"/>
+    <meta property="og:url" content="http://beerstrot.it/eventi/halloween.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
-    <meta property="og:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
+    <meta property="og:title" content="Halloween: Musica e Birra da Paura"/>
+    <meta property="og:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/eventi/beerfest.html"/>
+    <link rel="canonical" href="http://beerstrot.it/eventi/halloween.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -55,14 +55,14 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/beerfest.jpg" alt="Festa della Birra" />
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/halloween.jpg" alt="Festa di Halloween" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
                <header>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
-                            <h1>Halloween: Birra da Paura</h1>
+                            <h1>Halloween: Musica e Birra da Paura</h1>
                         </div>
                     </div>
                     <div class="row">
