--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -78,48 +78,10 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra, Streghe e Musica live a Ca' Vecchia Beerstrot</h2>
-                <p>Per il ciclo: Feste</p>
-                <p>Concludiamo l'estate col botto nella splendida cornice di Ca' Vecchia Beerstrot.</p>
-                <p>Due giorni di concerti: The Cadillacs Band, SottoZero e i dj Bloody Sound System e Boka.</p>
-                <p>Tre birrifici artigianali stratosferici: <a href="http://www.mc-77.com" target="_blank">MC77</a>, <a href="http://www.mukkeller.it" target="_blank">Mukkeller</a>, <a href="http://www.birrificioemiliano.com" target="_blank">Birrificio Emiliano</a>.</p>
-                <hr>
-                <h2>Programma</h2>
-                <h3 class="subheader">Venerdì 4 Settembre</h3>
-                <ul class="no-bullet">
-                    <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Bloody Sound System _ djset</li>
-                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; The Cadillacs Band _ rock&roll</li>
-                    <li>23:00&ensp;&ndash;&ensp;01:00&emsp; Bloody Sound System _ djset</li>
-                </ul>
-                <h3 class="subheader">Sabato 5 Settembre</h3>
-                <ul class="no-bullet">
-                    <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Boka _ djset</li>
-                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; SottoZero _ rock&roll</li>
-                    <li>23:00&ensp;&ndash;&ensp;01:00&emsp; Boka _ djset</li>
-                </ul>
-                <hr>
-                <h2>Menù</h2>
-                <h3 class="subheader">Cibo</h3>
-                <ul class="no-bullet">
-                    <li>Panino Salsiccia e Cipolla&emsp; 5</li>
-                    <li>Hamburger&emsp; 5</li>
-                    <li>Cheeseburger&emsp; 5</li>
-                    <li>Alette di Pollo Piccanti&emsp; 5</li>
-                    <li>Patate Fritte&emsp; 2</li>
-                    <li>Patate Arrosto&emsp; 2</li>
-                </ul>
-                <h3 class="subheader">Birre Artigianali</h3>
-                <ul class="no-bullet">
-                    <li>Alla Spina&emsp; 5</li>
-                </ul>
-                <hr>
-<!-- call to action inizio -->
-                <div class="row">
-                    <div class="medium-12 large-12 columns">
-                        <h3>Condividi le tue foto e video con <code>#beerstrot</code></h3>
-                    </div>
-                </div>
-            </div>   
-<!-- call to action fine -->
+                <p>Per il ciclo: Strghe</p>
+                <p>Dalle 23 festa di Halloween sotto al fienile di Ca' Vecchia Beerstrot.</p>
+                <p>Djset con Boka DJ. Ve lo ricordate? Ci ha fatto ballare per la festa di fine estate. Venite in costume o anche senza, ma copritevi un po': la festa è all'aperto.</p>
+                <p>Come sempre potrete bere grandi birre artigianali e qualche drink.</p>
         </article>
     </div>
 <!-- fine articolo -->
@@ -133,13 +95,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/beerfest.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/halloween.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi/beerfest.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi/halloween.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi/beerfest.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi/halloween.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
