--- a/eventi/index.html
+++ b/eventi/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="medium-3 large-3 columns">
                     <a href="http://beerstrot.it/eventi/instagramer.html">
-                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/halloween-th.jpg" alt="Festa della Birra">
+                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/halloween-th.jpg" alt="Festa di Halloween">
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
