--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -78,9 +78,10 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra, Streghe e Musica live a Ca' Vecchia Beerstrot</h2>
-                <p>Per il ciclo: Strghe</p>
+                <p>Per il ciclo: Streghe</p>
                 <p>Dalle 23:00 festa di Halloween sotto al fienile di Ca' Vecchia Beerstrot.</p>
-                <p>Djset con Boka DJ. Ve lo ricordate? Ci ha fatto ballare per la festa di fine estate. Venite in costume o anche senza, ma copritevi un po': la festa è all'aperto.</p>
+                <p>Djset con Boka DJ. Ve lo ricordate? Ci ha fatto ballare per la festa di fine estate.</p>
+                <p>Venite in costume o anche senza, ma copritevi un po': la festa è all'aperto.</p>
                 <p>Come sempre potrete bere grandi birre artigianali e qualche drink.</p>
         </article>
     </div>
