--- a/eventi/index.html
+++ b/eventi/index.html
@@ -59,7 +59,7 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/instagramer.html">
+                    <a href="http://beerstrot.it/eventi/halloween.html">
                         <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/halloween-th.jpg" alt="Festa di Halloween">
                     </a>
                 </div>
