--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/social/">Social</a></li>
-                <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -108,14 +108,31 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
-                <h1>Eventi</h1>
+                <h1>Take Away</h1>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
+                <a role="button" href="tel:+390718853384"><img src="http://beerstrot.it/asset/img/medium/take-away.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
+                <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
+                <p>Abbiamo un menù anche per questo.</p>
+                <a role="button" href="http://beerstrot.it/take-away/">Scopri il Menù &rarr;</a>
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-2n">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Eventi</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
                 <ul class="no-margin-list-bullet">
                     <li>Abbinamenti di cibi e birre</li>
@@ -128,42 +145,20 @@
             </div>
         </div>
     </div>
-    <div class="panel-home-2n">
+    <div class="panel-home-n">
         <div class="row">
-            <div class="medium-12 large-12 columns">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h1>Lato Social</h1>
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+            <div class="medium-6 large-6 columns">
                 <a role="button" href="http://beerstrot.it/social/"><img src="http://beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 large-6 columns">
                 <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nel <a href="http://beerstrot.it/social/">Lato Social</a> di Ca' Vecchia Beerstrot. 
                 <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
-            </div>
-        </div>
-    </div>
-    <div class="panel-home-n">
-        <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
-                <h1>Chi Siamo</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="medium-6 large-6 columns">
-                <div class="flex-video widescreen vimeo extra-space-video">
-                    <a role="button" href="http://beerstrot.it/video/">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
-                    </a>
-                </div>
-            </div>
-            <div class="medium-6 large-6 columns">
-                <p>Amiamo la birra artigianale e il buon cibo.</p>
-                <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
-                <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
             </div>
         </div>
     </div>
@@ -175,7 +170,11 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/contatti.jpg" alt="Insegna Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
+                <div class="flex-video widescreen vimeo extra-space-video">
+                    <a role="button" href="http://beerstrot.it/video/">
+                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </a>
+                </div>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
