--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -41,11 +41,11 @@
                 <li class="divider"></li>
                 <li class="active"><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/social/">Social</a></li>
-                <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
@@ -71,7 +71,7 @@
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Morbido e cremoso</h2>
             <p>Tiramisù alla birra stout, servito fresco in modo da gustare a fondo tutti i sapori del mascarpone e dei biscotti. Il retrogusto amaro dolce della birra stout rende il tutto sublime.</p>
-            <h2>Con cosa assaggiarla</h2>
+            <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre: dalle belghe alle americane, passando dall'Irlanda e dalla Scozia.</p>  
         </div>
     </div>
