--- a/contatti/presskit/index.html
+++ b/contatti/presskit/index.html
@@ -29,13 +29,13 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
-                <li class="divider"></li>
-                <li  class="active"><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li class="active"><a href="http://beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/blog/">Blog</a></li>
             </ul>
