--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
                 <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
+                <p>Scopri il team di Ca' Vecchia Beerstrot e la location</p>
                 <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
             </div>
         </div>
