--- a/take-away/index.html
+++ b/take-away/index.html
@@ -118,18 +118,18 @@
         <div class="panel-menu-n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger <br><small>Con patate fritte. Cottura media o, a richiesta, al sangue.</h2>
+                    <h2 class="subheader">Hamburger <br><small>Con patate fritte. Cottura media o, a richiesta, al sangue.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>
+                            <h3>New York <span class="right">8,5</span></h3>
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>
+                            <h3>Diablo<span class="right">8,8</span></h3>
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
+                            <h3>Deciso<span class="right">8,8</span></h3> 
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
@@ -137,7 +137,7 @@
                             <p>180 grammi di manzo, fontina, funghi di stagione</p>
                         </li>
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
+                            <h3>Lamb<span class="right">8,8</span></h3>    
                             <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
                         </li>
                         <li>
@@ -145,7 +145,7 @@
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
+                            <h3>Cecilia<span class="right">8</span></h3>    
                             <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
                         </li>
                     </ul>                      
@@ -175,7 +175,7 @@
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
+                            <h3>Costine<span class="right">10,5</span></h3>    
                             <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                         </li>
                         <li>
@@ -187,19 +187,21 @@
                             <p>chili piccante con carne e fagioli servito in pagnotta</p>
                         </li>
                         <li>
-                            <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                            <h3>Buffalo Chicken Wings<span class="right">7,5</span></h3>    
                             <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
                         </li>
                     </ul>                      
                 </div>
-            </div> 
+            </div>
+        </div>
+        <div class="panel-menu-n">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> Ordina</a></span>
                     <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>      
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 <!-- inizio footer -->
     <footer class="panel-prefooter">
