--- a/take-away/index.html
+++ b/take-away/index.html
@@ -47,8 +47,8 @@
         <div class="medium-12 large-12 columns">
             <h1>Take Away</h1>
             <p>Dal Mercoledì alla Domenica. Dalle 18:30.</p>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> Ordina</a></span>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>
+            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
+            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
             <hr>
         </div>
     </header>
@@ -194,11 +194,11 @@
                 </div>
             </div>
         </div>
-        <div class="panel-menu-n">
+        <div class="panel-menu-n no-space">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> Ordina</a></span>
-                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                    <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
+                    <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
                 </div>
             </div>
         </div>
