--- a/contatti/team/andrea-tagliazucchi.html
+++ b/contatti/team/andrea-tagliazucchi.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Team | Giulia Mazza</title>
-    <meta name="description" content="Fondatrice di Beerstrot e blogger in charge"/>
+    <title>Beerstrot | Team | Andrea Tagliazucchi</title>
+    <meta name="description" content="Fondatore di Beerstrot e barista in charge"/>
     <meta name="author" content="Ca' Vecchia Beerstrot" />
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html"/>
+    <link rel="canonical" href="http://beerstrot.it/contatti/team/andrea-tagliazucchi.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -46,17 +46,17 @@
 <!-- inizio header -->
     <header>
         <div id="image-background-team">
-            <img class="image-hero" src="http://beerstrot.it/asset/img/large/giulia-mazza-background.jpg" alt="Sfondo" />
-             <img class="user-image" src="http://beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Maza">
+            <img class="image-hero" src="http://beerstrot.it/asset/img/large/andrea-tagliazucchi-background.jpg" alt="Andrea Tagliazucchi" />
+             <img class="user-image" src="http://beerstrot.it/asset/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
-                <h1>Giulia Mazza</h1>
-                <p class="by-line">Fondatrice di Beerstrot e blogger in charge</p>
+                <h1>Andrea Tagliazucchi</h1>
+                <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
                 <blockquote>
-                    <p>Ho trascorso gli ultimi 7 anni a New York occupandomi della gestione dei bar di Piada: dal cappuccino, il migliore di NY, al vino, esclusivamente italiano.</p>
-                    <p>Ho sviluppato la qualità dell’accoglienza puntando sull’idea di base che un bar non serve clienti ma ospita persone. Appassionata di vino ho frequentato numerosi corsi di degustazione sviluppando conoscenze nella creazione di menù e negli abbinamenti fra il bere e il cibo.
-                    <cite>Giulia</cite>
+                    <p>Scrivo di birra e mi piace berla di brutto, ma solo birra artigianale.</p>
+                    <p>Tutte le foto sono fatte con un iphone e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
+                    <cite>Andrea</cite>
                     </p>
                 </blockquote>
             </div>
