--- a/contatti/index.html
+++ b/contatti/index.html
@@ -141,7 +141,7 @@
                 <h2>Team</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="team">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home">
                     <li>
