--- a/contatti/team/giovanni-attilio.html
+++ b/contatti/team/giovanni-attilio.html
@@ -66,7 +66,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns extra-space">
             <div class="clearfix">
-                <a href="http://beerstrot.it/contatti/#team" class="left">&larr; Tutto il team</a>
+                <a href="http://beerstrot.it/contatti#team/" class="left">&larr; Tutto il team</a>
             </div>
         </div> 
     </div>
