--- a/take-away/index.html
+++ b/take-away/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Menù</title>
-    <meta name="description" content="Riscopri i sapori con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
+    <title>Beerstrot | Take Away</title>
+    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Take Away"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
