--- a/contatti/index.html
+++ b/contatti/index.html
@@ -241,7 +241,7 @@
                     </li>
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/tavoli.jpg" class="th">
-                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavoli-th.jpg" alt="">
+                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavoli-th.jpg" alt="tavoli">
                         </a>
                     </li>
                     <li>
