fix take away spaces

--- a/take-away/index.html
+++ b/take-away/index.html
@@ -59,22 +59,22 @@
                     <h2 class="subheader">Menu Special <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3>Single <span class="right"><strike>8,8</strike> 6</span></h3>
+                            <h3>Single <span class="right"><strike>&ensp;8,8&ensp;</strike>&emsp;6</span></h3>
                             <p>hamburger + patate fritte</p>
                         </li>
                         <li>
-                            <h3>Famiglia<span class="right"><strike>26,6</strike> 18</span></h3>    
+                            <h3>Famiglia<span class="right"><strike>&ensp;26,6&ensp;</strike>&emsp;18</span></h3>    
                             <p>2 hamburger + 2 bocconcini di pollo + 2 patate fritte</p>
                         </li>
                         <li>
-                            <h3>Sport<span class="right"><strike>31,3</strike> 20</span></h3>    
+                            <h3>Sport<span class="right"><strike>&ensp;31,3&ensp;</strike>&emsp;20</span></h3>    
                             <p>hamburger + costine + buffalo chicken wing + bocconcini di pollo + patate fritte</p>
                         </li>
                         <li class="hide-for-small"></li>
                         <li>
                             <h3 class="text-center">Aggiungi una Zuppa
-                                <span class="show-for-small"><strike>4,5</strike> 2</span>
-                                <span class=" hide-for-small"><strike>4,5</strike> 2</span>
+                                <span class="show-for-small"><strike>&ensp;4,5&ensp;</strike>&emsp;2</span>
+                                <span class=" hide-for-small"><strike>&ensp;4,5&ensp;</strike>&emsp;2</span>
                             </h3>
                         </li>
                         <li class="hide-for-small"></li>
