--- a/menu/index.html
+++ b/menu/index.html
@@ -662,7 +662,7 @@
                             </li>
                             <li>
                                 <h3>Grappa Rosso Conero<span class="right">3</span></h3>
-                                <p>garofali</p>
+                                <p>garofoli</p>
                             </li>
                             <li>
                                 <h3>Mistrà, Sibilla, Tonico<span class="right">2</span></h3>
