--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -19,6 +19,8 @@
     <meta property="og:title" content="Halloween: Musica e Birra da Paura"/>
     <meta property="og:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/halloween.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -115,7 +117,6 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/eventi/" class="left">&larr; Lista eventi</a>
-                <!-- <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a> -->
             </div>
         </div> 
     </div>
