--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -14,10 +14,11 @@
     <meta name="twitter:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/halloween.html"/>
+    <meta property="fb:app_id" content="[1549149915357715]" />
     <meta property="og:url" content="http://beerstrot.it/eventi/halloween.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Halloween: Musica e Birra da Paura"/>
-    <meta property="og:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
+    <meta property="og:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween. Il 31 Ottobre, dalle 23:00, festa di Halloween sotto al fienile di Ca' Vecchia Beerstrot."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
