--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Festa di Halloween | Musica e Birra da Paura</title>
     <meta name="description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -14,7 +15,7 @@
     <meta name="twitter:description" content="In un locale serio, di ispirazione americana, non può mancare una strepitosa festa di Halloween"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/halloween.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/halloween.html"/>
-    <meta property="fb:app_id" content="[1549149915357715]" />
+    <meta property="fb:app_id" content="1549149915357715" />
     <meta property="og:url" content="http://beerstrot.it/eventi/halloween.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Halloween: Musica e Birra da Paura"/>
