--- a/video/index.html
+++ b/video/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:player:stream" content="https://youtu.be/2_gbVco836c?&autoStart=false"/>
     <meta name="twitter:url" content="http://beerstrot.it/video/"/>
     <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E1, mp4a.40.2&quot;">
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/video/"/>
     <meta property="og:type" content="video.other"/>
     <meta property="og:title" content="Il Gusto in Fermento"/>
