--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <meta name="twitter:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/background-home.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it"/>
-    <meta property="og:type" content="article"/>
+    <meta property="og:type" content="website"/>
     <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
     <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
     <meta property="og:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
