--- a/social/index.html
+++ b/social/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Le foto, i commenti e le review su Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/social/"/>
     <link rel="stylesheet" href="../css/app.css"/>
