--- a/take-away/index.html
+++ b/take-away/index.html
@@ -7,6 +7,7 @@
     <title>Beerstrot | Take Away</title>
     <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Take Away"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/take-away/"/>
