--- a/contatti/team/giovanni-attilio.html
+++ b/contatti/team/giovanni-attilio.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Team | Giovanni Attilio</title>
     <meta name="description" content="Fondatore di Beerstrot e brewer master in charge"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/contatti/team/giovanni-attilio.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
