--- a/eventi/aperitivi.html
+++ b/eventi/aperitivi.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Aperitivi</title>
     <meta name="description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
-    <meta name="author" content="Giulia Mazza"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/aperitivi.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/aperitivi.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/aperitivi.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Estate + aperitivo = Ca' Vecchia Beerstrot"/>
