--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Beersfest | Festa della Birra</title>
     <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/beerfest.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/beerfest.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
