--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Instagramer</title>
     <meta name="description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk. Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk. Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/instagramer.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/instagramer.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
