--- a/menu/cibo/cecilia.html
+++ b/menu/cibo/cecilia.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Hamburger | Cecilia</title>
     <meta name="description" content="Hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
-    <meta name="author" content="Giulia Mazza"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Hamburger vegetariano di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cecilia.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cecilia.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/cecilia.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Cecilia"/>
