--- a/eventi/festa-estate-concerto-live.html
+++ b/eventi/festa-estate-concerto-live.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Concerti Live | Flora e Fauna</title>
     <meta name="description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="L'estate festeggiamola con i Flora e Fauna"/>
