--- a/eventi/index.html
+++ b/eventi/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Vivi l'Esperienza</title>
     <meta name="description" content="Eventi di Beerstrot: dj set, rock, jazz, spettacoli di cabaret e tanto altro"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
