--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Birrificio MC-77 | Birra Ape Regina</title>
     <meta name="description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta name="author" content="Giulia Mazza"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birra Ape Regina"/>
