--- a/menu/cibo/estivo.html
+++ b/menu/cibo/estivo.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Hamburger | Estivo</title>
     <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
-    <meta name="author" content="Giulia Mazza"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
@@ -14,6 +15,7 @@
     <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Estivo"/>
