--- a/social/index.html
+++ b/social/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Social Immagini Commenti e Recensioni</title>
     <meta name="description" content="Le foto, i commenti e le review su Ca' Vecchia Beerstrot"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
