--- a/video/index.html
+++ b/video/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Il Gusto in Fermento</title>
     <meta name="description" content="Il gusto in fermento: Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
+    <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="player">
