--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="tel:+390718853384"><img src="http://beerstrot.it/asset/img/medium/take-away.jpg" alt="Take Away" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/take-away/"><img src="http://beerstrot.it/asset/img/medium/take-away.jpg" alt="Take Away" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
