--- a/menu/cibo/diablo.html
+++ b/menu/cibo/diablo.html
@@ -107,7 +107,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/cibo/lamb.html" class="right">Lamb &rarr;</a>
+                <a href="http://beerstrot.it/menu/cibo/deciso.html" class="right">Deciso &rarr;</a>
             </div>
         </div> 
     </div>
