--- a/menu/index.html
+++ b/menu/index.html
@@ -221,11 +221,11 @@
                                 <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
                             </li>
                             <li>
-                                <h3>Birramisù<span class="right">5</span></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5</span></a></h3>
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3>Cheesecake<span class="right">5</span></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheesecake<span class="right">5</span></a></h3>
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
