--- a/menu/index.html
+++ b/menu/index.html
@@ -225,7 +225,7 @@
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheesecake<span class="right">5</span></a></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/cheesecake.html">Cheesecake<span class="right">5</span></a></h3>
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
