--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -107,6 +107,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
+                <a href="http://beerstrot.it/menu/cibo/cheesecake.html" class="right">Cheesecake &rarr;</a>
             </div>
         </div> 
     </div>
