--- a/menu/cibo/cheesecake.html
+++ b/menu/cibo/cheesecake.html
@@ -14,15 +14,15 @@
     <meta name="twitter:title" content="Cheescake"/>
     <meta name="twitter:description" content="Cheescake in stile New York. Ricca e intensa"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cheescake"/>
     <meta property="og:description" content="Cheescake in stile New York. Ricca e intensa"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheescake.html"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -88,13 +88,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/cheesecake.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/cheesecake.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/cheesecake.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -107,7 +107,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/cibo/birramisu.html" class="right">Birramisù &rarr;</a>
+                <!-- <a href="http://beerstrot.it/menu/cibo/birramisu.html" class="right">Birramisù &rarr;</a> -->
             </div>
         </div> 
     </div>
