--- a/menu/cibo/cheesecake.html
+++ b/menu/cibo/cheesecake.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Cheescake</title>
-    <meta name="description" content="Cheescake in stile New York. Ricca e intensa"/>
+    <title>Beerstrot | Cheesecake</title>
+    <meta name="description" content="Cheesecake in stile New York. Ricca e intensa"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Cheescake"/>
-    <meta name="twitter:description" content="Cheescake in stile New York. Ricca e intensa"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
+    <meta name="twitter:title" content="Cheesecake"/>
+    <meta name="twitter:description" content="Cheesecake in stile New York. Ricca e intensa"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cheesecake.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cheescake"/>
-    <meta property="og:description" content="Cheescake in stile New York. Ricca e intensa"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
+    <meta property="og:description" content="Cheesecake in stile New York. Ricca e intensa"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheesecake.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheesecake.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -57,7 +57,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/cheescake.jpg" alt="Cheescake"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/cheesecake.jpg" alt="Cheesecake"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
@@ -72,9 +72,9 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Ricca e intensa</h2>
-            <p>Cheescake in perfetto stile New York. Non è leggera, ma l'acido dello yougurt si abbina perfettamente con la dolcezza del formaggio. La base croccante del biscotto assieme al formaggio creano un mix buonissimo.</p>
+            <p>Cheesecake in perfetto stile New York. Non è leggera, ma l'acido dello yougurt si abbina perfettamente con la dolcezza del formaggio. La base croccante del biscotto assieme al formaggio creano un mix buonissimo.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Gustalo assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre: dalle belghe alle americane, passando dall'Irlanda e dalla Scozia.</p>  
+            <p>Gustala assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre: dalle belghe alle americane, passando dall'Irlanda e dalla Scozia.</p>  
         </div>
     </div>
 <!-- fine articolo -->
